fixed testimonial width increased max height added margin top, bottom to container align info to center removed excess stylesformated file

--- a/styles/Testimonials.module.css
+++ b/styles/Testimonials.module.css
@@ -1,10 +1,8 @@
 /* =============== SOCIAL PROOF =============== */
 .testimonials {
   font-style: italic;
-  font-size: 1.2em;
   letter-spacing: 1px;
   font-weight: 700;
-  color: #5e5e5e;
   margin: 4em 0 5em;
   padding: 4em 0;
   color: var(--color-secondary);
@@ -24,17 +22,6 @@
   z-index: 100;
 }
 
-.testimonial {
-  max-height: 30vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 1em 0 2em;
-  position: relative;
-  z-index: 200;
-}
-
 .title {
   text-align: center;
   font-size: 1.8em;
@@ -43,11 +30,25 @@
   z-index: 200;
 }
 
+.testimonial {
+  font-size: 1.4em;
+  max-height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  margin: 1em 0 2em;
+  position: relative;
+  z-index: 200;
+}
+
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 2em 0;
 }
 
 .image {
@@ -65,6 +66,7 @@
 .info {
   order: 3;
   margin: 1.5em 0 0 3em;
+  align-self: center;
 }
 
 .info,
@@ -90,7 +92,7 @@
   padding: 2em 0;
   background-size: cover;
   background-position: center;
-} 
+}
 
 @keyframes slider {
   0% {
@@ -116,12 +118,15 @@
   70% {
     left: -200%;
   }
+
   75% {
     left: -300%;
   }
+
   95% {
     left: -300%;
   }
+
   99% {
     left: -300%;
   }
@@ -137,11 +142,9 @@
   .testimonials {
     background-position: top center;
   }
+
   .container {
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
   }
 
   .image-container {
